<resources>
    <string name="app_name">Reservopia</string>
    <string name="histroy">History</string>
    <string name="upcomingAppointment">Upcoming Appointment</string>
    <string name="select_service_type">Select Location &amp; Service : </string>
    <string name="about">About</string>
    <string name="booking_app">Book Appointment</string>
    <string name="contact_us">Contact Us</string>
    <string name="aboutUs">EffOne is a global IT consulting services company with experience that spans over two decades. We have presence in over 20 cities in the USA and India and our customers come from 4 </string>
    <string name="scheduling">ScheduleAppointment</string>
    <string name="email">Email :</string>
    <string name="phone">Phone :</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="first">First Name :</string>
    <string name="last">Last Name :</string>
    <string name="password">Password :</string>
    <string name="conf_password">Confirm Password</string>
    <string name="createAccount">Create Account</string>
    <string name="submit">Book Appointment</string>
    <string name="registeration">User Register : </string>
    <string name="available_service">Available Service</string>
    <string name="appointment">appointment</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="address">Address:</string>
    <string name="CA">CA</string>
    <string name="appointment_confirmation">Appointment Confirmation</string>
    <string name="name">Name</string>
    <string name="service">Service</string>
    <string name="date">Date</string>
    <string name="address_coloumn">Address</string>
    <string name="phone_column">Phone</string>
    <string name="confirmation_no">Confirmation #</string>
    <string name="confirmation_details">Confirmation Details </string>
    <string name="appointment_history">Appointment History</string>
    <string name="service_type">Service Type</string>
    <string name="date_time">Select Date : </string>
    <string name="time_slot">Pick one time slot :</string>
    <string name="appointment_details">Appointment Details</string>


    <string name="token">B3Yhavq16yxYIDDVYT4hyS20Y597dsDa</string>




    <!-- database table Names and entity names-->
    <string name="location_table">Location</string> <!-- location table name -->
    <string name="loc_ic">loc_id</string>
    <string name="org_id">org_id</string>
    <string name="loc_name">loc_name</string>
    <string name="apt_start_date">apt_start_date</string>
    <string name="apt_end_date">apt_end_date</string>
    <string name="location_time_zone">location_time_zone</string>
    <string name="advance_booking_days">advance_booking_days</string>
    <string name="is_active">is_active</string>


    <string name="service_table">Service</string> <!-- service table name -->
    <string name="service_id">service_id</string>
    <string name="state">state</string>
    <string name="country">country</string>


    <string name="hoildays_table">Hoilday</string> <!-- Hoildays table name -->
    <string name="hoilday_id">hoilday_id</string>


    <string name="ServiceXLocation_table">ServiceXLocation</string> <!-- ServiceXlocation table name -->
    <string name="serviceXLocaiton_ic">servxlocation_id</string>
    <string name="appointment_duration">appointment_duration</string>








</resources>
