<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/phone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:weightSum="1">

                <EditText
                    android:id="@+id/et_firstname"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:hint="@string/first" />

                <EditText
                    android:id="@+id/et_lastName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:hint="@string/last" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/address" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:weightSum="1">

               <EditText
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:id="@+id/et_state"
                   android:layout_weight="0.2"
                   android:hint="@string/CA"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_city"
                    android:layout_weight="0.4"
                    android:hint="@string/city"/>
                <EditText
                    android:id="@+id/et_zip"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".4"
                    android:hint="@string/zip"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>